--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+ <div class="container">
     <nav>
         <ul>
             <li class="item" id="item-1"><a href="#home">Home</a></li>
@@ -107,7 +108,7 @@
             &#169; All rights reserved
         </footer>
     </section>
-
+</div>
 </body>
 
 </html>
