--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="cropped-favicon.png" type="image/x-icon">
 </head>
-
+<style>
+    .container{
+        overflow: hidden;
+    }
+    </style>
 <body>
  <div class="container">
     <nav>
